--- a/GWWeek4.html
+++ b/GWWeek4.html
@@ -6,36 +6,66 @@
     <link rel="stylesheet" href="GWWeek4.css">
 </head>
 <body>
+<!--<table border="2">-->
+    <!--<h1>UNBUNTO CHART</h1>-->
+    <!--<tr>-->
+        <!--<th>Logo</th>-->
+        <!--<th>UNBUNTO FLAVOR</th>-->
+        <!--<th>DESKTOP ENVIORNMENT</th>-->
+        <!--<th>EVOLES INFO</th>-->
+    <!--</tr>-->
+
+    <!--<tr>-->
+
+        <!--<td><img src="kubuntu.png" height="512" width="504"/></td>-->
+        <!--<td>Kubuntu</td>-->
+        <!--<td>KDE</td>-->
+        <!--<td><a href="https://kubuntu.org/">Kubuntu</a></td>-->
+
+    <!--</tr>-->
+    <!--<tr>-->
+        <!--<td><img src="lubuntu.png" height="450" width="600"/></td>-->
+        <!--<td>Lubuntu</td>-->
+        <!--<td>LXQt</td>-->
+        <!--<td><a href="https://kubuntu.org/">Kubuntu</a></td>-->
+    <!--</tr>-->
+    <!--<tr>-->
+        <!--<td><img src="Xubuntu_logo.svg.png" height="600" width="600"/></td>-->
+        <!--<td>Xubuntu</td>-->
+        <!--<td>Xfce</td>-->
+        <!--<td><a href="https://kubuntu.org/">Kubuntu</a></td>-->
+    <!--</tr>-->
+
 <table border="2">
-    <h1>UNBUNTO CHART</h1>
+    <h1>Youtube Videos</h1>
     <tr>
-        <th>Logo</th>
-        <th>UNBUNTO FLAVOR</th>
-        <th>DESKTOP ENVIORNMENT</th>
-        <th>EVOLES INFO</th>
+        <th>YouTube video </th>
+        <th>Channel names</th>
+        <th>Date Created</th>
+        <th>Video Link</th>
+
     </tr>
 
     <tr>
 
-        <td><img src="kubuntu.png" height="512" width="504"/></td>
-        <td>Kubuntu</td>
-        <td>KDE</td>
+        <td><iframe width="560" height="315" src="https://www.youtube.com/embed/dHHt_VBefeQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+        <td>new vid</td>
+        <td>2-1-19</td>
         <td><a href="https://kubuntu.org/">Kubuntu</a></td>
 
     </tr>
     <tr>
-        <td><img src="lubuntu.png" height="450" width="600"/></td>
-        <td>Lubuntu</td>
-        <td>LXQt</td>
+        <td><iframe width="560" height="315" src="https://www.youtube.com/embed/0z-oJTZ1b5Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>></td>
+        <td>nicer vid</td>
+        <td>2-1-19</td>
         <td><a href="https://kubuntu.org/">Kubuntu</a></td>
     </tr>
     <tr>
-        <td><img src="Xubuntu_logo.svg.png" height="600" width="600"/></td>
-        <td>Xubuntu</td>
-        <td>Xfce</td>
+        <td><iframe width="560" height="315" src="https://www.youtube.com/embed/FQm5OCf387k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+        <td>nicest vid</td>
+        <td>2-1-19</td>
         <td><a href="https://kubuntu.org/">Kubuntu</a></td>
     </tr>
-
 
 </body>
 </html>
